--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,65 @@
 /* 
-Layout
-
-The designs were created to the following widths:
-  Mobile: 375px
-  Desktop: 1440px
-
 Colors
 Primary
   Soft blue: hsl(215, 51%, 70%)
   Cyan: hsl(178, 100%, 50%)
 
 Neutral
-  Very dark blue (main BG): hsl(217, 54%, 11%)
-  Very dark blue (card BG): hsl(216, 50%, 16%)
   Very dark blue (line): hsl(215, 32%, 27%)
   White: hsl(0, 0%, 100%)
 
 Typography
-Body Copy
-  Font size (paragraph): 18px
 
 Font
   Family: Outfit              font-family: 'Outfit', sans-serif;
   Weights: 300, 400, 600
 */
 
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(217, 54%, 11%);
+  font-family: Outfit, sans-serif;
+}
+
+#card {
+  width: 350px;
+  height: 596px;
+  background-color: hsl(216, 50%, 16%);
+  border-radius: 15px;
+}
+
+/* The large image */
+#crystal {
+  width: 302px;
+  margin: 24px;
+  border-radius: 8px;
+}
+
+/* Text */
+h1 {
+  font-size: 22px;
+  font-weight: 600;
+  color: hsl(0, 0%, 100%);
+}
+
+p {
+  font-size: 18px;
+  font-weight: 300;
+  color: hsl(215, 51%, 70%)
+}
+
+
+
+/* Mobile */
+@media (max-width: 375px) {
+  body {
+    background-color: red;
+  }
+/* 
+Crystal-image seíze
+*/
+
+}
